--- a/client-hptq/package.json
+++ b/client-hptq/package.json
@@ -13,6 +13,7 @@
     "framer-motion": "^7.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "socket.io-client": "^4.5.1",
     "web-vitals": "^2.1.4"
