--- a/client-hptq/package.json
+++ b/client-hptq/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-scroll-to-bottom": "^4.2.0",
     "socket.io-client": "^4.5.1",
     "web-vitals": "^2.1.4"
   },
