--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "dayjs": "^1.11.4",
     "framer-motion": "^7.0.0",
     "react": "^18.2.0",
+    "react-confetti": "^6.1.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-scroll-to-bottom": "^4.2.0",
+    "react-use": "^17.4.0",
     "socket.io": "^4.5.1",
     "socket.io-client": "^4.5.1",
     "web-vitals": "^2.1.4"
